fix RabbitMQ variable name & add some annotations

--- a/client-side/.env.example
+++ b/client-side/.env.example
@@ -1,4 +1,4 @@
-RABBITMQ_IP=
+RABBITMQ_HOST=
 RABBITMQ_PORT=
 RABBITMQ_USERNAME=
 RABBITMQ_PWD=
@@ -6,6 +6,8 @@ RABBITMQ_QUEUE=
 
 HASH_SALT = b'$\xee\xde#\r\x07\xe8\xd3R\xe06.\x98\xxf9\x0c\xb1\xa8\xa1\xaa\x06.\x00{2h2\xa6\a6\xd9\xf3<\xc9'
 
+## Should be blocked
+"""
 N_P = 3
 N_Q = 128
 N_D = 5
@@ -22,3 +24,4 @@ F_N = 16
 F_f = [-26, 8, 9, -23, -28, -26, -33, 20, 27, -26, 11, -14, -7, -24, -19, -4]
 F_g = [-4, -2, -30, 20, 59, 5, 1, 24, 3, -14, 17, -30, 11, 16, 48, 3]
 F_h = [11486, 6619, 268, 1695, 1416, 6152, 11034, 2870, 4280, 8588, 6543, 7450, 2052, 2335, 6122, 158]
+"""
