--- a/server-side/.env.example
+++ b/server-side/.env.example
@@ -1,2 +1,18 @@
-RABBITMQ_IP=
+## for rabbitmq connection test
+
+RABBITMQ_HOST=
 RABBITMQ_PORT=
+
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
+
+RABBITMQ_QUEUE=
+
+## for mongodb connection test
+
+MONGODB_HOST=
+MONGODB_PORT=
+
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_DBNAME=
